<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    android:background="@drawable/fat9"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/cv_profile"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/name"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="23sp"
         />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:hint="@string/contact_number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="4dp"
        android:padding="12dp"
        android:textSize="23sp"
        android:drawableStart="@drawable/ic_baseline_contact_phone_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number"
        android:hint="@string/description"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="4dp"
        android:padding="12dp"
        android:textSize="23sp"
        android:drawableStart="@drawable/ic_baseline_description_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/fd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/des"
        android:hint="@string/final_degree"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="4dp"
        android:padding="12dp"
        android:textSize="23sp"
        android:drawableStart="@drawable/ic_baseline_school_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/skill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fd"
        android:hint="@string/skill"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="4dp"
        android:padding="12dp"
        android:textSize="23sp"
        android:drawableStart="@drawable/ic_baseline_assignment_turned_in_24"
        android:drawablePadding="20dp"
        />

 <EditText
     android:id="@+id/exp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/skill"
     android:hint="@string/experience"
     android:textColorHint="@color/white"
     android:textColor="@color/white"
     android:layout_margin="4dp"
     android:padding="12dp"
     android:textSize="20sp"
     android:drawableStart="@drawable/ic_baseline_accessibility_new_24"
     android:drawablePadding="20dp"
     />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/circles"
        android:gravity="center"
        android:onClick="demo"
        android:text="@string/submit"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="UsingOnClickInXml" />


</RelativeLayout>